# sucrawler

./: .env.example  .gitignore  DISCLAIMER.md  README.md  crawler-architecture-design.md  pyproject.toml
api/: app.py
api/routes/: __init__.py  data_routes.py  task_routes.py
api/schemas/: __init__.py  data_schema.py  task_schema.py
config/: base.yaml  dev.yaml  prod.yaml  test.yaml
docs/: bilibili-guide.md
docs/design/: Auth_Integration_Design.md  CDP_Integration_Design.md
scripts/: crawl_user.py  init_db.py  migrate_config.py  run_spider.py
sucrawler/: main.py
sucrawler/auth/: __init__.py  base.py  cookie_utils.py  credential_store.py  exceptions.py  qrcode.py  types.py
sucrawler/browser/: __init__.py  events.py  exceptions.py  types.py
sucrawler/cache/: __init__.py  base.py  factory.py  local_cache.py
sucrawler/cli/: __init__.py  auth.py  crawl_user.py
sucrawler/common/: constants.py  decorators.py  exceptions.py  types.py
sucrawler/config/: __init__.py  loader.py  settings.py  validator.py
sucrawler/core/: engine.py  events.py  item.py  request.py  response.py  spider.py
sucrawler/downloaders/: __init__.py  aiohttp_downloader.py  cdp_downloader.py  httpx_downloader.py  playwright_downloader.py
sucrawler/extractors/: __init__.py  css_extractor.py  regex_extractor.py  xpath_extractor.py
sucrawler/logging/: __init__.py  formatters.py  handlers.py  logger.py  trace.py
sucrawler/middlewares/: __init__.py  log_middleware.py  proxy_middleware.py  rate_limit_middleware.py  retry_middleware.py  stats_middleware.py  user_agent_middleware.py
sucrawler/models/: __init__.py  enums.py  mixins.py
sucrawler/parsers/: __init__.py  html_parser.py  json_parser.py  xml_parser.py
sucrawler/pipelines/: __init__.py  clean_pipeline.py  dedup_pipeline.py  enrich_pipeline.py  validate_pipeline.py
sucrawler/repositories/: __init__.py  data_repository.py  task_repository.py
sucrawler/scheduler/: __init__.py  bloom_filter.py  memory_scheduler.py  priority_queue.py
sucrawler/services/: __init__.py  crawler_service.py  data_service.py  media_downloader.py  task_service.py
sucrawler/storage/: __init__.py  registry.py
tests/: conftest.py
(+79 files in other folders)
