[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sucrawler"
version = "0.1.0"
description = "企业级多平台爬虫框架"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "parsel>=1.11.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "playwright>=1.45.0",
]

[project.scripts]
sucrawler = "sucrawler.main:main"

[tool.setuptools.packages.find]
include = ["sucrawler*", "api*"]
exclude = ["tests*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "aiohttp>=3.14.2",
    "black>=26.5.1",
    "lxml-stubs>=0.5.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
    "types-pyyaml>=6.0.12.20260518",
]
